--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
-    <title>Kunalgaurav18.github.io by kunalgaurav18</title>
+    <title>Kunal Gaurav</title>
   </head>
 
   <body>
